# marketstack-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: general.yml  publish.yml
src/: api.rs  auth.rs  lib.rs  marketstack.rs  test.rs  types.rs
src/api/: auth.rs  basic.rs  client.rs  common.rs  currencies.rs  dividends.rs  endpoint.rs  endpoint_prelude.rs  eod.rs  error.rs  exchanges.rs  ignore.rs  intraday.rs  paged.rs  params.rs  query.rs  raw.rs  splits.rs  tickers.rs  timezones.rs
src/api/eod/: eod.rs  eod_latest.rs
src/api/paged/: all_at_once.rs  lazy.rs  link_header.rs  pagination.rs
src/test/: basic.rs  client.rs
tests/: currencies.rs  dividends.rs  eod.rs  eod_date.rs  eod_latest.rs  eod_latest_test.rs  eod_test.rs  exchanges.rs  intraday.rs  splits.rs  tickers.rs  timezones.rs
tests/setup/: mod.rs
