[package]
name = "marketstack-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust bindings for Marketstack REST API"
homepage = "https://github.com/reubenwong97/marketstack-rs/"
documentation = "https://docs.rs/marketstack-rs/"
repository = "https://github.com/reubenwong97/marketstack-rs/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "~0.12"
reqwest = { version = "~0.11.19", features = [
  "blocking",
  "json",
], default-features = false, optional = true }
http = "~0.2"
serde = { version = "~1.0.103", features = ["derive"] }
serde_json = "^1.0.25"
serde_urlencoded = "~0.7"
url = "^2.1"
bytes = "1.5.0"
thiserror = "1.0.48"
async-trait = "0.1.73"
chrono = { version = "0.4.31", default-features = false, features = [
  "clock",
  "serde",
] }
futures-util = "0.3.28"
itertools = "0.11.0"

[dev-dependencies]
dotenvy = "0.15.7"
