[package]
name = "marketstack"
version = "0.0.19"
edition = "2021"
license = "MIT"
description = "Rust bindings for Marketstack REST API"
homepage = "https://github.com/reubenwong97/marketstack-rs/"
documentation = "https://docs.rs/marketstack/"
repository = "https://github.com/reubenwong97/marketstack-rs/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "~0.20"
http = "~1.3"
serde = { version = "~1.0.103", features = ["derive"] }
serde_json = "^1.0.25"
serde_urlencoded = "~0.7"
url = "^2.1"
bytes = "1.5.0"
thiserror = "2.0.0"
async-trait = "0.1.73"
chrono = { version = "0.4.31", default-features = false, features = [
  "clock",
  "serde",
] }
futures-util = "0.3.28"
itertools = "0.14.0"
reqwest = { version = "~0.12.0", features = ["blocking", "json"] }
log = "~0.4.20"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.18.5", features = ["macros", "rt-multi-thread"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
